updated more details

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am QA Engineer</p>
-      <h1>Where I'm From</h1>
-      <p>Trading Platform</p>
+      <h1>Where I'm from</h1>
+      <p> India</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Reading and Travelling</p>
       <h1>What's your dream job?</h1>
       <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>NJ</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Like coding</p>
     </section>
