--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>About Me</title>
+    <title>Introduction</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -18,7 +18,7 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am QA Engineer</p>
-      <h1>Where I'm from</h1>
+      <h1>Where I'm from...</h1>
       <p> India</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Reading and Travelling</p>
